cutoff fix for create scenario panel

--- a/src/interface/src/app/plan/create-scenarios/create-scenarios-intro/create-scenarios-intro.component.scss
+++ b/src/interface/src/app/plan/create-scenarios/create-scenarios-intro/create-scenarios-intro.component.scss
@@ -14,3 +14,7 @@
   display: flex;
   flex-direction: row;
 }
+
+.gap-60 {
+  gap: 60px;
+}
